# airship_simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deflate_blimp.sh  gitpush.sh  package.xml
aircap/AirCap/scripts/simulation/: setup_mavocap_gazebo.sh
blimp/: CMakeLists.txt  package.xml
blimp/launch/: blimp_without_env.launch  spawn_target.launch
blimp/meshes/blimp_body/: blimp_body_cola_v1.dae  blimp_body_v1.dae  blimp_body_v2.dae  blimp_body_v3.dae  blimp_body_v3.mb
blimp/meshes/blimp_body/Low-Poly_airship_max/: Low-Poly_airship.max
blimp/meshes/blimp_fin/: blimp_top_rud_part2_v1.mb  blimp_top_rud_part2_v4.mb  blimp_top_rud_part2_v5.dae  top_rud_part2_v2.dae  top_rud_part2_v5.mb
blimp/meshes/blimp_gondola/: blimp_gondola_v2.mb
blimp/meshes/blimp_propeller/: blimp_bot_propeller_cw_v3.dae  propeller_ccw_v2.dae  propeller_cw_v2.dae
blimp/meshes/blimp_support/: support_v5.mb
blimp/meshes/blimp_wing/: wing.mb
blimp/meshes/fbx/: blimp_body.fbx  stick.blend1
blimp/msgs/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+mav_msgs/: FilteredSensorData.m  TorqueThrust.m
blimp/src/plugin/dynamicvolume/src/: finliftdrag_plugin.cpp  model_push.world
blimp/src/plugin/finliftdrag/: CMakeLists.txt  package.xml
blimp/urdf/: description_link.xacro  description_plugin.xacro  description_sensor.xacro  plugin_physics.xacro
blimp/worlds/: wind.world
blimp_description/: package.xml
blimp_description/launch/: blimp_gcs.launch  blimp_gcs_wind.launch  blimp_only.launch  blimp_only_gcshitl.launch  blimp_with_env.launch  blimp_without_env.launch  controls_flyer.launch  teleokeyboard.launch  test_springs.launch  world.launch
blimp_description/meshes/blimp_body/: blimp.3ds  blimp_body_cola_v2.dae  blimp_body_cola_v3.dae
blimp_description/meshes/blimp_body/Low-Poly_airship_fbx/: Low-Poly_airship.fbx
blimp_description/meshes/blimp_fin/: blimp_top_rud_part2_v1.dae
blimp_description/meshes/blimp_gondola/: blimp_gondola_v1.mb  blimp_gondola_v3.dae
blimp_description/meshes/blimp_propeller/: propeller_ccw_v3.dae  propeller_cw_v3.dae
blimp_description/meshes/blimp_support/: blimp_support_v3.dae  blimp_support_v4.dae  support.mb
blimp_description/msgs/matlab_gen/jar/: mav_msgs-3.3.2.md5
blimp_description/resource/: blimp.yaml  controller_blimp.yaml
blimp_description/rviz/: 3_blimp.rviz  3_blimp_nmpc.rviz  4_blimp.rviz  blimp.rviz  blimp_mpc.rviz  v2_blimp_visualize.rviz  v9_blimp_target.rviz
blimp_description/script/: reset_simulation.sh
blimp_description/script/mbrl/env/: target_interactive.py  teleokeyboard.py
blimp_description/script/ros_api/controller/: blimp.py  controls_flyer.py  gazeboConnection.py  mixer.py  plane_controller.py  rotor_controller.py  trajectory_generator.py
blimp_description/script/ros_api/env/: blimp_env.py  gazeboConnection.py  gcs_blimp.py  myTF.py  target_interactive.py
blimp_description/src/plugin/dynamicvolume/: CMakeLists.txt  package.xml
blimp_description/src/plugin/dynamicvolume/src/: dynamicvolume_plugin.hpp  finliftdrag_plugin.hpp
blimp_description/src/plugin/finliftdrag/src/: dynamicvolume_plugin.cpp
blimp_description/urdf/: asus_camera.urdf.xacro  blimp_base.xacro  description_controller.xacro  description_link.xacro  description_plugin.xacro  description_property.xacro  description_sensor.xacro  model_xacro.xacro  plugin_component_snippets.xacro  plugin_control.xacro  plugin_physics.xacro  plugin_sensors.xacro  target.xacro
blimp_description/worlds/: arena_RAL.world  basic.world  spring_damper_test.world  transparency.world
blimp_gazebo_plugin/dynamicvolume/: CMakeLists.txt  package.xml
blimp_gazebo_plugin/dynamicvolume/src/: dynamicvolume_plugin.cpp  dynamicvolume_plugin.hpp
blimp_gazebo_plugin/finliftdrag/: CMakeLists.txt  package.xml
blimp_gazebo_plugin/finliftdrag/src/: finliftdrag_plugin.cpp  finliftdrag_plugin.hpp
blimp_gazebo_plugin/normwind/: CMakeLists.txt  package.xml
blimp_gazebo_plugin/normwind/src/: normwind2_plugin.cpp  normwind2_plugin.hpp  normwind_plugin.cpp  normwind_plugin.hpp
experiments/: SITL.uav  waypoints.xml
launch/: blimp_with_env.launch  spawn_target.launch  spawn_uav.launch
meshes/blimp_body/: Cola.mb  blimp_body_cola_v4.dae  blimp_body_distance_measure.mb  blimp_body_v4.dae  blimpmodel.c4d
meshes/blimp_body/Low-Poly_airship_blend/: Low-Poly_airship.blend
meshes/blimp_body/Low-Poly_airship_c4d/: Low-Poly_airship.c4d
meshes/blimp_body/Low-Poly_airship_mb/: Low-Poly_airship.mb
meshes/blimp_fin/: blimp_bot_rud_part1_v1.dae  blimp_bot_rud_part1_v2.dae  blimp_bot_rud_part1_v3.dae  blimp_top_rud_part1_v1.mb  blimp_top_rud_part1_v2.dae  blimp_top_rud_part1_v3.dae  blimp_top_rud_part2_v3.dae  bot_rud_part1_v1.mb  bot_rud_part1_v2.mb  top_rud_part1_v1.dae  top_rud_part2_v4.dae
meshes/blimp_gondola/: blimp_gondola_v1.dae  blimp_gondola_v2.dae  blimp_gondola_v3.mb  blimp_gondola_v4.dae
meshes/blimp_propeller/: blimp_right_propeller_v3.dae
meshes/blimp_support/: blimp_support.dae  blimp_support_v2.dae  blimp_support_v5.dae
meshes/blimp_wing/: blimp_stick_v1.dae  blimp_stick_v2.dae  blimp_wing_v1.dae  blimp_wing_v2.dae  wing_v2.mb
meshes/fbx/: fin2.fbx  stick.blend  stick.fbx
msgs/: javalibrarypath.txt
msgs/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
msgs/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+mav_msgs/: Actuators.m  RateThrust.m  (+3 more)
resource/: controller_blimp.yaml
rviz/: blimp.rviz
script/: reset_simulation.sh  respawn_sphere.sh  setup_blimp_gazebo.sh  setup_mavocap_gazebo.sh  ssd_server.sh
script/mbrl/env/: blimp_env.py  gazeboConnection.py  target_interactive.py  target_moving.py
script/test/: blimp_python_node.py  blimp_python_node_tmp.py  controlTest.py  motorTest.py
src/: CMakeLists.txt  CMakeLists_finliftdrag_plugin.txt  CMakeLists_test.txt  package.xml
src/include/: dynamicvolume_plugin.hpp
urdf/: asus_camera.urdf.xacro  description_plugin.xacro  description_property.xacro  inertia_calculator.xacro  model_xacro.xacro  plugin_control.xacro  plugin_physics.xacro
worlds/: basic.world  empty.world
(+1 files in other folders)
